--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Моя первая программа</string>
-    <string name="textHello">Привет мир!</string>
+    <string name="textHello">Привет, мир!</string>
 </resources>
